<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Change"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cusEtUser"
        android:layout_marginVertical="20dp"
        android:hint="@string/user"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/cusBtnUpdate"
            android:background="@drawable/border_signin"
            android:text="@string/Ok"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/cusBtnHuy"
            android:background="@drawable/border_signin"
            android:text="@string/cancel"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>