<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/passBtnClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/gray"
        android:src="@drawable/ic_baseline_close_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/changepass"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/passPassOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:hint="@string/passold"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passEtNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:hint="@string/passnew"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passEtXacNhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:hint="@string/passcf"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/passBtnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_signin"
            android:text="@string/Ok"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>


</RelativeLayout>