<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:background="@drawable/border_tron"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/helpBtnClose"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/gray"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_baseline_close_24"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_tron"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/gray"
            android:paddingHorizontal="20dp">

            <AutoCompleteTextView
                android:id="@+id/helpTvSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/helpSearch"
                android:completionThreshold="0"
                android:hint="@string/search"
                android:textColorHint="@color/black" />

            <ImageView
                android:id="@+id/helpSearch"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/iconsearch" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questions"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginVertical="10dp"/>
        <TextView
            android:layout_marginVertical="10dp"
            android:id="@+id/helpcau1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howPost"
            android:textSize="20sp"
            android:textColor="@color/purple_700"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_height="1dp"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/helpcau2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/i"
            android:textSize="20sp"
            android:textColor="@color/purple_700"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_height="1dp"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/helpcau3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/howReport"
            android:textSize="20sp"
            android:textColor="@color/purple_700"/>
    </LinearLayout>
</RelativeLayout>