<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:textColor="@color/pink_"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/fontpumkin"
                android:text="@string/title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:textColor="@color/pink_"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/fonta"
                android:text="@string/findPet"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tymcho" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/signin"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:id="@+id/appBtnSignIn"
                android:textAllCaps="false"
                android:background="@drawable/border_signin"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/member"
                    android:textSize="25sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/signup"
                    android:textSize="25sp"
                    android:id="@+id/appTvSignUp"
                    android:textColor="@color/pink_"
                    android:layout_marginHorizontal="5dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</layout>