<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/border_tron"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/btn_Close"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/gray"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_baseline_close_24"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/send_email"
            android:layout_marginHorizontal="10dp"/>
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_signin"
            android:textSize="25sp"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:layout_marginVertical="20dp"
            android:textColor="@color/white"/>
    
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:gravity="center"
            android:textColor="@color/black"/>

    
    </LinearLayout>
</RelativeLayout>