<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/border_tron"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/emailBtnClose"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/gray"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_baseline_close_24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/changeem"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/changeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:hint="@string/User" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_signin"
                android:text="@string/save"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>