<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/epBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/epToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pink_"
                android:navigationIcon="@drawable/ic_baseline_close_24">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_below="@id/epBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/epImgAvt"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/epUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:text="@string/user"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/epTvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diltitle" />

            <EditText
                android:id="@+id/epTvMota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:gravity="top"
                android:hint="@string/share"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/epimgHien"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="gone"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/epChonImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/imgadd" />

            <Button
                android:id="@+id/epBtnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:background="@drawable/border_signin"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

</layout>