<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:background="@drawable/border_tron"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/bdBtnClose"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/gray"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_baseline_close_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/bdImgAvt"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/bdUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:text="@string/user"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/bdTvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diltitle" />

            <EditText
                android:id="@+id/bdTvMota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:background="@color/white"
                android:gravity="top"
                android:hint="@string/share"
                android:textSize="25sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/anhHT"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/bdimgHien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY" />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/closeanh"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/gray"
                    android:background="@drawable/border_tron"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_baseline_close_24"/>
            </RelativeLayout>


            <ImageView
                android:id="@+id/dbChonImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/imgadd" />

            <Button
                android:id="@+id/bdBtnPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:background="@drawable/border_signin"
                android:text="@string/post"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>